# MLInference

./: .gitignore  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2026_03_17_1902-2daca17d2027_create_requests_table.py  c9c3ebabc365_create_requests_table.py
app/api/requests/: controller.py  crud.py  dependencies.py  mlservice.py  schemas.py
app/core/: config.py
app/core/models/: base.py  db_helper.py  request.py
app/mlmodels/spam_email_detection/: spam_detection.py
